--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dashboard --minimal -- npm run dev",
+    "start": "webpack-dashboard -- npm run dev",
     "dev": "cross-env NODE_ENV=development API_BASEURL=https://jsonplaceholder.typicode.com webpack-dev-server",
     "rebuild": "cross-env NODE_ENV=production API_BASEURL=https://jsonplaceholder.typicode.com webpack --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,51 +12,52 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-decorators": "^7.4.4",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^9.6.1",
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
+    "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
-    "cross-env": "^5.2.0",
-    "css-loader": "^3.1.0",
+    "cross-env": "^5.2.1",
+    "css-loader": "^3.4.2",
     "cssnano": "^4.1.10",
-    "eslint": "^6.1.0",
+    "eslint": "^6.8.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react": "^7.18.3",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.12.0",
+    "mini-css-extract-plugin": "^0.8.2",
+    "node-sass": "^4.13.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "postcss-scss": "^2.0.0",
-    "react-hot-loader": "^4.12.10",
-    "sass-loader": "^7.1.0",
+    "react-hot-loader": "^4.12.19",
+    "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "^4.37.0",
-    "webpack-cli": "^3.3.6",
-    "webpack-dashboard": "^3.0.7",
-    "webpack-dev-server": "^3.7.2"
+    "terser-webpack-plugin": "^2.3.2",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
+    "webpack-dashboard": "^3.2.0",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "axios": "^0.19.0",
-    "babel-eslint": "^10.0.2",
+    "@babel/polyfill": "^7.8.3",
+    "axios": "^0.19.2",
+    "babel-eslint": "^10.0.3",
     "babel-plugin-react-css-modules": "^5.2.6",
-    "history": "^4.9.0",
+    "history": "^4.10.1",
     "mobx": "4.13.0",
-    "mobx-react": "^6.1.1",
-    "mobx-react-router": "^4.0.7",
-    "node-polyglot": "^2.3.1",
+    "mobx-react": "^6.1.8",
+    "mobx-react-router": "^4.1.0",
+    "node-polyglot": "^2.4.0",
     "normalize.css": "^8.0.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-polyglot": "^0.4.1",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-polyglot": "^0.4.2",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2"
   },
   "browserslist": [
     "last 2 versions",
