Updated app for nodejs version 16.3.0

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projects",
+  "name": "react-starter",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -29,12 +29,13 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.2",
-    "node-sass": "^4.13.1",
+    "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "postcss-scss": "^2.0.0",
     "react-hot-loader": "^4.12.19",
-    "sass-loader": "^7.3.1",
+    "sass": "^1.32.8",
+    "sass-loader": "^10.0.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^2.3.2",
     "webpack": "^4.41.6",
@@ -44,7 +45,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.3",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "babel-eslint": "^10.0.3",
     "babel-plugin-react-css-modules": "^5.2.6",
     "history": "^4.10.1",
