--- a/package.json
+++ b/package.json
@@ -5,44 +5,47 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dashboard -- npm run dev",
-    "dev": "cross-env NODE_ENV=development API_BASEURL=https://jsonplaceholder.typicode.com webpack-dev-server",
+    "dev": "cross-env NODE_ENV=development API_BASEURL=https://jsonplaceholder.typicode.com webpack serve",
     "rebuild": "cross-env NODE_ENV=production API_BASEURL=https://jsonplaceholder.typicode.com webpack --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.8.4",
+    "@babel/core": "^7.13.16",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/preset-react": "^7.8.3",
-    "autoprefixer": "^9.7.4",
-    "babel-loader": "^8.0.6",
+    "@babel/plugin-proposal-decorators": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
+    "@dr.pogodin/babel-plugin-react-css-modules": "^6.1.1",
+    "autoprefixer": "^10.2.5",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "cross-env": "^5.2.1",
-    "css-loader": "^3.4.2",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.2.4",
     "cssnano": "^4.1.10",
     "eslint": "^6.8.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-react": "^7.18.3",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.8.2",    
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^3.0.0",
-    "postcss-scss": "^2.0.0",
-    "react-hot-loader": "^4.12.19",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.5.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "postcss": "^8.2.10",
+    "postcss-loader": "^5.2.0",
+    "postcss-scss": "^3.0.5",
+    "react-hot-loader": "^4.13.0",
     "sass": "^1.32.8",
     "sass-loader": "^10.0.0",
-    "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^2.3.2",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11",
-    "webpack-dashboard": "^3.2.0",
-    "webpack-dev-server": "^3.10.3"
+    "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.1.1",
+    "webpack": "^5.39.1",
+    "webpack-cli": "^4.7.2",
+    "webpack-dashboard": "^3.3.1",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/polyfill": "^7.8.3",
     "axios": "^0.21.1",
     "babel-eslint": "^10.0.3",
