--- a/package.json
+++ b/package.json
@@ -12,55 +12,55 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.13.16",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-decorators": "^7.13.15",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/preset-react": "^7.13.13",
-    "@dr.pogodin/babel-plugin-react-css-modules": "^6.1.1",
-    "autoprefixer": "^10.2.5",
-    "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^3.0.0",
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/plugin-proposal-decorators": "^7.16.4",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-react": "^7.16.0",
+    "@dr.pogodin/babel-plugin-react-css-modules": "^6.5.3",
+    "autoprefixer": "^10.4.0",
+    "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.2.4",
-    "cssnano": "^4.1.10",
-    "eslint": "^6.8.0",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-react": "^7.18.3",
-    "html-loader": "^2.1.2",
-    "html-webpack-plugin": "^5.3.1",
-    "mini-css-extract-plugin": "^1.5.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "postcss": "^8.2.10",
-    "postcss-loader": "^5.2.0",
-    "postcss-scss": "^3.0.5",
+    "css-loader": "^6.5.1",
+    "cssnano": "^5.0.11",
+    "eslint": "^8.2.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-react": "^7.27.0",
+    "html-loader": "^3.0.1",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.4.5",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "postcss": "^8.3.11",
+    "postcss-loader": "^6.2.0",
+    "postcss-scss": "^4.0.2",
     "react-hot-loader": "^4.13.0",
-    "sass": "^1.32.8",
-    "sass-loader": "^10.0.0",
-    "style-loader": "^2.0.0",
-    "terser-webpack-plugin": "^5.1.1",
-    "webpack": "^5.39.1",
-    "webpack-cli": "^4.7.2",
-    "webpack-dashboard": "^3.3.1",
-    "webpack-dev-server": "^3.11.2"
+    "sass": "^1.43.4",
+    "sass-loader": "^12.3.0",
+    "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.2.5",
+    "webpack": "^5.64.1",
+    "webpack-cli": "^4.9.1",
+    "webpack-dashboard": "^3.3.6",
+    "webpack-dev-server": "^4.5.0"
   },
   "dependencies": {
-    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/polyfill": "^7.8.3",
-    "axios": "^0.21.1",
+    "axios": "^0.24.0",
     "babel-eslint": "^10.0.3",
     "babel-plugin-react-css-modules": "^5.2.6",
-    "history": "^4.10.1",
+    "history": "4.10.1",
     "mobx": "4.13.0",
     "mobx-react": "^6.1.8",
     "mobx-react-router": "^4.1.0",
-    "node-polyglot": "^2.4.0",
+    "node-polyglot": "^2.4.2",
     "normalize.css": "^8.0.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-polyglot": "^0.4.2",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-polyglot": "^0.7.2",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0"
   },
   "browserslist": [
     "last 2 versions",
